--- a/demo/index.html
+++ b/demo/index.html
@@ -222,7 +222,7 @@
     <script src="./assets/js/jquery.min.js"></script>
     <script src="./assets/js/bootstrap.min.js"></script>
     <script src="./assets/js/sudoku.min.js"></script>
-    <script src="./assets/js/app.js"></script>
+    <script src="./assets/js/app.min.js"></script>
 </body>
 
 </html>
